loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:35: error: not found: value isGroundWhite
}while(!isGroundWhite()) 
        ^